2001-08-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Issue Shapelib 1.2.9

	* shputils.c: DBFAddField() call should check for -1 return value
	for failure.

2001-07-03  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: cleanup better if SHX missing, provided by 
	Riccardo Cohen.

2001-06-21  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Fixed NULL support with patches from Jim Matthews. 

	* shpopen.c: Be more careful of establishing initial file bounds in
	face of possible NULL shapes.

2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: ensure binary mode open.

2001-05-31  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: Add support for writing null shapes.

	* dbfopen.c: added DBFGetFieldIndex(), contributed by Jim Matthews.

	* dbfopen.c/shapefil.h/dbf_api.h: added support for NULL fields
	in .dbf files. 

2001-05-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: add some checking on the record count to ensure it
	is reasonable.

2001-05-23  Frank Warmerdam  <warmerdam@pobox.com>

	* shapefile.h, shpopen.c, dbfopen.c, shptree.c: added the SHPAPI_CALL
	macro to allow compilation with _stdcall conventions. 

2001-02-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed a few memory leaks when SHPOpen() fails. 

2000-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* Fix from Craig Bruce (Cubewerx) for DBFReadAttribute() for
	the white space trimming code to avoid reading outside allocated
	memory.

2000-11-02  Frank Warmerdam  <warmerda@cs46980-c>

	* Checked in upgraded shputils.c from Bill Miller.

2000-10-05  Frank Warmerdam  <warmerda@cs46980-c>

	* Fixed DBFWriteAttribute() to ensure we can't overwrite the
	end of the szSField buffer even if the width is set large.
	Bug report by Kirk Benell <kirk@rsinc.com>.

2000-09-25  Frank Warmerdam  <warmerda@cs46980-c>

	* Added DBFGetNativeFieldType() (contributed by Daniel) to dbfopen.c.

2000-07-18  Frank Warmerdam  <warmerda@cs46980-c>
