@@ -1,3 +1,9 @@
+2001-11-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shpopen.c/shapefil.h: Move record buffer into SHPInfo so that 
+	different threads can safely access separate files.  Other threading
+	issues may remain.
+
 2001-08-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Issue Shapelib 1.2.9
